# printforge

./: .commitlintrc.yaml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yaml  release.yaml
crates/pf-accounting/: Cargo.toml
crates/pf-accounting/src/: chargeback.rs  config.rs  cost_center.rs  cost_model.rs  cost_table.rs  error.rs  lib.rs  pg_repo.rs  quota.rs  reporting.rs  repository.rs  service.rs  service_impl.rs
crates/pf-admin-ui/: Cargo.toml
crates/pf-admin-ui/src/: alerts.rs  config.rs  dashboard.rs  error.rs  fleet_view.rs  job_view.rs  lib.rs  policy_mgmt.rs  reports.rs  scope.rs  state.rs  user_mgmt.rs
crates/pf-admin-ui/src/routes/: alerts.rs  dashboard.rs  fleet.rs  jobs.rs  mod.rs  reports.rs  users.rs
crates/pf-api-gateway/: Cargo.toml
crates/pf-api-gateway/src/: background.rs  config.rs  error.rs  lib.rs  main.rs  reports_generator.rs  router.rs  server.rs  validation.rs
crates/pf-api-gateway/src/middleware/: audit.rs  auth.rs  layers.rs  mod.rs  rate_limit.rs  request_id.rs
crates/pf-api-gateway/src/routes/: accounting.rs  audit.rs  health.rs  jobs.rs  mod.rs  printers.rs  users.rs
crates/pf-api-gateway/tests/: e2e_live.rs  integration_auth.rs  integration_wired.rs
crates/pf-audit/: Cargo.toml
crates/pf-audit/src/: collector.rs  config.rs  emass.rs  error.rs  event_catalog.rs  lib.rs  pg_repo.rs  query.rs  repository.rs  retention.rs  service.rs  service_impl.rs  siem_export.rs  writer.rs
crates/pf-auth/: Cargo.toml
crates/pf-auth/fuzz/: Cargo.toml  README.md  generate_corpus.py
crates/pf-auth/fuzz/fuzz_targets/: certificate_parser.rs  pem_parser.rs
crates/pf-auth/src/: certificate.rs  config.rs  crl.rs  error.rs  jwt.rs  lib.rs  middleware.rs  ocsp.rs  oidc.rs  pin.rs  saml.rs  trust_store.rs
crates/pf-auth/tests/: certificate_chain_validation.rs  http_transport.rs  property_tests.rs
crates/pf-cache-node/: Cargo.toml
crates/pf-cache-node/src/: auth_cache.rs  config.rs  error.rs  fleet_proxy.rs  heartbeat.rs  lib.rs  local_spool.rs  main.rs  metrics.rs  mode.rs  nats_client.rs  nats_leaf.rs  orchestrator.rs  sync.rs
crates/pf-cache-node/tests/: cache_node_integration.rs
crates/pf-common/: Cargo.toml
crates/pf-common/src/: audit.rs  config.rs  crypto.rs  database.rs  error.rs  fleet.rs  identity.rs  job.rs  lib.rs  policy.rs  telemetry.rs  time.rs  validated.rs
crates/pf-common/tests/: property_tests.rs
crates/pf-driver-service/: Cargo.toml
crates/pf-driver-service/fuzz/: Cargo.toml  README.md  generate_corpus.py
crates/pf-driver-service/fuzz/fuzz_targets/: ipp_parser.rs
crates/pf-driver-service/src/: attributes.rs  config.rs  error.rs  hold.rs  ipp_parser.rs  ipp_response.rs  lib.rs  operations.rs  server.rs  tls.rs  wpp.rs
crates/pf-driver-service/tests/: integration_ipp_operations.rs  property_tests.rs
crates/pf-enroll-portal/: Cargo.toml
crates/pf-enroll-portal/src/: banner.rs  callback.rs  config.rs  driver_hub.rs  enrollment.rs  error.rs  idp_redirect.rs  lib.rs  profile.rs  routes.rs
crates/pf-enroll-portal/tests/: enrollment_integration.rs
crates/pf-firmware-mgr/: Cargo.toml
crates/pf-firmware-mgr/src/: acquisition.rs  approval.rs  config.rs  deployment.rs  error.rs  lib.rs  monitoring.rs  pg_repo.rs  pusher_hp.rs  pusher_km.rs  pusher_lexmark.rs  pusher_xerox.rs  registry.rs  repository.rs  rollback.rs  rollout.rs  validation.rs
crates/pf-fleet-mgr/: Cargo.toml
crates/pf-fleet-mgr/src/: alert_store.rs  alerting.rs  config.rs  discovery.rs  error.rs  health.rs  inventory.rs  ipp_probe.rs  lib.rs  pg_alert_repo.rs  pg_repo.rs  repository.rs  service.rs  service_impl.rs  snmp.rs  telemetry.rs
crates/pf-fleet-mgr/tests/: fleet_integration.rs
crates/pf-job-queue/: Cargo.toml
crates/pf-job-queue/src/: config.rs  delivery.rs  error.rs  ingestion.rs  lib.rs  lifecycle.rs  metadata.rs  nats_sync.rs  pg_repo.rs  release.rs  repository.rs  retention.rs  service.rs  service_impl.rs  sync.rs
crates/pf-policy-engine/: Cargo.toml
crates/pf-policy-engine/policies/: classification.rego  color.rego  duplex.rego  page_limit.rego  quota.rego
crates/pf-policy-engine/src/: client.rs  config.rs  decision.rs  defaults.rs  embedded.rs  error.rs  input.rs  lib.rs  quota.rs  repository.rs
crates/pf-policy-engine/tests/: property_tests.rs
crates/pf-reports/: Cargo.toml
crates/pf-reports/src/: error.rs  lib.rs  pg_repo.rs  repository.rs  service.rs  service_impl.rs  types.rs  worker.rs
crates/pf-spool/: Cargo.toml
crates/pf-spool/src/: client.rs  config.rs  encryption.rs  error.rs  key_store.rs  lib.rs  retention.rs  spool.rs
crates/pf-spool/tests/: spool_integration.rs
crates/pf-supply/: Cargo.toml
crates/pf-supply/src/: approval.rs  config.rs  error.rs  lib.rs  monitoring.rs  pg_repo.rs  prediction.rs  reorder.rs  repository.rs  requisition.rs  vendor.rs  vendor_hp.rs  vendor_km.rs  (+2 more)
crates/pf-user-provisioning/: Cargo.toml
crates/pf-user-provisioning/src/: attribute_sync.rs  claims.rs  config.rs  cost_center.rs  deprovisioning.rs  error.rs  jit.rs  lib.rs  pg_repo.rs  repository.rs  role_mapping.rs  service.rs  service_impl.rs  user.rs
crates/pf-user-provisioning/src/scim/: bulk.rs  endpoints.rs  filter.rs  mod.rs  schema.rs
deploy/: docker-compose.dev.yaml
deploy/hauler/: README.md  hauler-charts.yaml  hauler-manifest.yaml
deploy/keycloak/: printforge-realm.json
docs/: nist-800-53-mapping.md  threat-model.md
migrations/: 001_create_users.sql  002_create_printers.sql  003_create_jobs.sql  004_create_audit_events.sql  005_create_quota_counters.sql  006_create_job_costs.sql  007_create_firmware.sql  008_create_supply_orders.sql  009_create_policy_overrides.sql  010_create_role_mappings.sql  011_add_user_site_id.sql  012_create_alerts.sql  013_create_reports.sql  014_add_job_target_printer.sql
scripts/: bootstrap.sh  dev-setup.sh  nist-control-check.sh  security-review.sh  worktree-agent.sh
web/admin/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+30 files in other folders)
