# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 PrintForge Contributors

[workspace]
resolver = "3"
members = [
    "crates/pf-common",
    "crates/pf-auth",
    "crates/pf-job-queue",
    "crates/pf-fleet-mgr",
    "crates/pf-firmware-mgr",
    "crates/pf-policy-engine",
    "crates/pf-accounting",
    "crates/pf-supply",
    "crates/pf-audit",
    "crates/pf-spool",
    "crates/pf-api-gateway",
    "crates/pf-admin-ui",
    "crates/pf-enroll-portal",
    "crates/pf-cache-node",
    "crates/pf-driver-service",
    "crates/pf-user-provisioning",
    "crates/pf-reports",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
repository = "https://github.com/printforge/printforge"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }

# Messaging
async-nats = "0.38"

# S3 / Object storage (RustFS-compatible)
aws-sdk-s3 = "1"
aws-config = "1"

# Cryptography (FIPS 140-3 path)
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
x509-parser = "0.16"
rcgen = "0.13"

# Identity / Auth
openidconnect = "4"
jsonwebtoken = "9"
saml-rs = "0.1"

# SNMP (fleet management)
snmp = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
rustls-pemfile = "2"

# Testing
proptest = "1"
wiremock = "0.6"
tokio-test = "0.4"
assert_matches = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"
