[package]
name = "pf-api-gateway"
description = "HTTP/gRPC API gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
pf-auth = { path = "../pf-auth" }
pf-job-queue = { path = "../pf-job-queue" }
pf-fleet-mgr = { path = "../pf-fleet-mgr" }
pf-accounting = { path = "../pf-accounting" }
pf-audit = { path = "../pf-audit" }
pf-user-provisioning = { path = "../pf-user-provisioning" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
rustls = { workspace = true }
jsonwebtoken = { workspace = true }
secrecy = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "pf-api-gateway"
path = "src/main.rs"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
sqlx = { workspace = true }

[lints]
workspace = true
