[package]
name = "pf-audit"
description = "Immutable audit log and compliance evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Audit
sqlx = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
