# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 PrintForge Contributors

[package]
name = "pf-auth"
description = "Identity and authentication service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Auth-specific
openidconnect = { workspace = true }
jsonwebtoken = { workspace = true }
x509-parser = { workspace = true }
ring = { workspace = true }
secrecy = { workspace = true }
lru = "0.12"
url = { workspace = true }
base64 = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Web framework (middleware extractors)
axum = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
rcgen = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
