[package]
name = "pf-cache-node"
description = "Installation-level edge cache orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Embedded services
pf-auth = { path = "../pf-auth" }
pf-job-queue = { path = "../pf-job-queue" }
pf-spool = { path = "../pf-spool" }
pf-fleet-mgr = { path = "../pf-fleet-mgr" }
pf-driver-service = { path = "../pf-driver-service" }
async-nats = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
futures-util = { workspace = true }

[[bin]]
name = "pf-cache-node"
path = "src/main.rs"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
