[package]
name = "pf-common"
description = "Shared types, error handling, crypto, config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }
ring = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
