[package]
name = "pf-job-queue"
description = "Print job lifecycle management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Job queue specific
sqlx = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
