[package]
name = "pf-reports"
description = "Async report persistence and dispatch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
