[package]
name = "pf-spool"
description = "Encrypted spool store via RustFS S3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# S3 / RustFS
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
ring = { workspace = true }
secrecy = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
