# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 PrintForge Contributors

[package]
name = "pf-user-provisioning"
description = "JIT provisioning, SCIM 2.0, and attribute synchronization for PrintForge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
pf-common = { path = "../pf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
secrecy = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
