# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 PrintForge Contributors

[package]
name = "pf-driver-service-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"

[dependencies.pf-driver-service]
path = ".."

# Prevent this from interfering with workspaces.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "ipp_parser"
path = "fuzz_targets/ipp_parser.rs"
doc = false
